# EECS-570-Project-26W

./: .gitignore  CMakeLists.txt  README.md  milestone1.tex  poster.tex  proposal_rq2.tex  refs-3.bib  requirements.txt  speaking_notes.md
.claude/: settings.local.json
data/: sample_measurements.csv
final_report/: final_report.aux  final_report.bbl  final_report.blg  final_report.out  final_report.tex  main.tex
outputs/: all_gpu_gemm_predictions.csv  all_gpu_stencil_predictions.csv  all_measured_speedup.csv  gemm_best_stage.csv  gemm_predictions.csv  heatmap_data.csv  stencil_predictions.csv  tmp.csv  tmp32.csv  tmp_st.csv
scripts/: anomaly_analysis.py  best_stage_report.py  build_measured_speedup_csv.py  demo_prefilter.py  evaluate_mape.py  extract_l2_params.py  generate_heatmap_data.py  generate_poster_figures.py  generate_poster_tables.py  generate_predictions.py  generate_roofline.py  generate_step_figures.py  plot_results.py  regen_l2_characterization.py  run_cuda_benchmarks.py  run_model_validation.py  run_nsight_profiling.py
slurm/: cpasync_a100_mig-45536384.out  cpasync_a40-45535511.out  cpasync_a40-45535717.out  cpasync_a40-45536383.out  cpasync_h100-27002685.out  cpasync_h100-27105326.out  cpasync_h100-27105359.out  cpasync_l40s-27002695.out  cpasync_l40s-27002696.out  cpasync_l40s-27002698.out  cpasync_l40s-27002699.out  cpasync_l40s-27002722.out  cpasync_l40s-27105325.out  cpasync_l40s-27105358.out  cpasync_v100-45535388.out  cpasync_v100-45536382.out  cpasync_v100-45663548.out  run_a100_mig.sbatch  run_a40.sbatch  run_full_pipeline.sbatch  (+4 more)
(+39 files in other folders)
